# neuralfeed

./: .gitignore  .mcp.json  CLAUDE.md  README.md  app-feedback-v1.md  app-feedback-v2.md  app-feedback-v3.md  app-feedback-v4.md  app-feedback-v5.md  app-feedback-v6.md  docker-compose.dev.yml  ideas-v2.md  ideas.md  render.yaml
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_watched_accounts.py  0003_source_health.py  0004_article_ai_summary.py  0005_fetch_attempted_at.py  0006_article_deep_summary.py  0007_users.py  0008_user_article_state.py  0009_article_image_url.py  0010_article_indexes.py
backend/app/: main.py
backend/app/core/: cache.py  config.py  database.py  deps.py  net.py  rate_limit.py  scheduler.py  seed.py  time.py
backend/app/fetchers/: account_discovery.py  arxiv.py  base.py  github_trending.py  hackernews.py  hf_papers.py  hf_spaces.py  huggingface.py  nitter.py  reddit.py  registry.py  rss.py  youtube.py
backend/app/models/: __init__.py  article.py  feedback_log.py  source.py  user.py  user_article_state.py  user_preference.py  watched_account.py
backend/app/schemas/: article.py  feedback.py  source.py
backend/app/services/: auth_service.py  backfill.py  context_line.py  dedupe.py  digest.py  email.py  enricher.py  feedback_service.py  fetch_runner.py  hotness.py  ingest.py  landmarks.py  preference_learner.py  ranker.py  recap.py  relevance.py  (+6 more)
backend/scripts/: check_sources.py  curate.py  detect_landmarks.py  retag.py
backend/tests/: conftest.py
(+124 files in other folders)
