[project]
name = "neural-feed-backend"
version = "0.1.0"
description = "NeuralFeed backend — FastAPI + Celery"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy[asyncio]==2.0.36",
    "aiosqlite==0.20.0",
    "asyncpg>=0.30",  # Postgres driver for Neon/production DATABASE_URL
    "alembic==1.14.0",
    "pydantic-settings==2.6.1",
    "celery[redis]==5.4.0",  # legacy worker path, unused at runtime (Phase 3 scale-up)
    "apscheduler==3.11.0",
    "redis==5.2.1",
    "structlog==24.4.0",
    "httpx==0.28.1",
    "feedparser==6.0.11",
    "python-dateutil==2.9.0",
    "trafilatura>=1.12",
    "pyjwt==2.10.1",  # Phase 3.1 auth tokens
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "anyio",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.setuptools.packages.find]
include = ["app*"]
